--- a/package.json
+++ b/package.json
@@ -6,14 +6,37 @@
   "dependencies": {
     "@types/react": "^16.3.14",
     "@types/react-dom": "^16.0.5",
+    "@types/react-router": "^4.0.25",
+    "@types/react-router-dom": "^4.2.6",
+    "@types/react-transition-group": "^2.0.11",
+    "babel-plugin-module-resolver": "^3.1.1",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
+    "mobx": "^4.3.0",
+    "mobx-react": "^5.1.2",
     "parcel": "^1.8.1",
     "parcel-bundler": "^1.8.1",
     "parcel-plugin-typescript": "^0.7.1",
     "react": "^16.0.0",
-    "react-dom": "^16.4.0"
+    "react-dom": "^16.4.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-transition-group": "^2.3.1",
+    "styled-components": "^3.3.0",
+    "ts-loader": "^4.3.1",
+    "typescript": "^2.8.3",
+    "webpack": "^4.10.2"
+  },
+  "scripts": {
+    "build-parcel": "parcel build src/index.parcel.html -d dist/parcel --out-file index.html",
+    "start-parcel": "parcel src/index.parcel.html -d dist/parcel --out-file index.html",
+    "build-webpack": "webpack --mode production",
+    "start-webpack": "webpack-dev-server --open"
   },
   "devDependencies": {
-    "http-server": "^0.11.1",
-    "typescript": "^2.8.3"
+    "parcel-plugin-bundle-visualiser": "^1.1.2",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-cli": "^3.0.1",
+    "webpack-dev-server": "^3.1.4"
   }
 }
