--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,6 @@
     "sourceMap": true,
     "noImplicitAny": true,
     "target": "es5",
-    "allowJs": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "noUnusedLocals": true,
@@ -16,6 +15,11 @@
     "lib": [
       "es2015",
       "dom"
-    ]
+    ],
+    "moduleResolution": "node",
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   }
 }
